--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+.bg-primary {
+    background-color: #2c5f85 !important;
+}
+
+#main-area {
+    width: 100%;
+    height: calc(100vh - 60px);
+}
+
 #language-div {
     vertical-align: middle;
 }
