--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,10 @@
 }
 
 #main-area {
-    width: 100%;
+    top: 100px;
+    position: absolute;
     height: calc(100vh - 60px);
+    width: 100%;
 }
 
 #language-div {
@@ -164,4 +166,36 @@ button {
 
 .thin {
     font-weight: normal;
+}
+
+#d3tooltip {
+    position: absolute;
+    /*width: 200px;*/
+    height: auto;
+    padding: 10px;
+    background-color: #fafafa;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    pointer-events: none;
+    opacity:0;
+    z-index: 1;
+}
+
+#d3tooltip.hidden {
+    display: none;
+}
+
+#d3tooltip p {
+    margin: 0;
+    font-family: sans-serif;
+    font-size: 12px;
+    line-height: 20px;
+}
+
+.navbar-brand a {
+    text-decoration: none;
 }
